@@ -1,3 +1,7 @@
+2003-01-07	fabian
+    * new VT100Screen code, should be faster
+    * Japanese localization files updated
+    
 2003-01-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Remove fatal recursive loop by not calling 
